--- a/style/style.sass
+++ b/style/style.sass
@@ -193,12 +193,24 @@ label
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2)
 
 .add-product .row
+  position: relative !important
+
+.absolute
+  position: absolute !important
+
+.relative
   position: relative
 
-.removeCartItem, .close-comp-add-prod
+.close-comp-add-prod
   position: absolute
   top: 15px
   right: 15px
+
+.removeCartItem
+  position: absolute
+  top: 0
+  right: 5px
+  z-index: 555
 
 .flag
   width: 25px
@@ -443,8 +455,33 @@ form
   color: #152036
   border-radius: 10px
 
+.datepicker
+  position: relative
 
-@media screen and (max-width: 1400px)
+.datepicker__topbar
+  display: none
+
+#datepicker-datepicker
+  width: 100%
+
+.count-person
+  position: absolute
+  right: 0
+  select
+    margin: 1px
+
+
+.demo__item
+  width: 100%
+
+.count-night input
+  margin: 1px
+
+.count-person select, .count-night input
+  cursor: pointer
+
+
+@media screen and (max-width: 1399px)
   .login, .registration
     min-height: 92vh
 
@@ -458,8 +495,13 @@ form
     margin-top: 100px
     min-height: 78vh
 
+  .count-person
+    position: absolute
+    right: -20px
 
-@media screen and (max-width: 1200px)
+
+
+@media screen and (max-width: 1199px)
   .login, .registration
     min-height: 92vh
 
@@ -483,7 +525,12 @@ form
   .w-lg-100
     width: 100% !important
 
-@media screen and (max-width: 992px)
+  .count-person
+    position: absolute
+    right: -20px
+
+
+@media screen and (max-width: 991px)
   .login, .registration
     min-height: 92vh
 
@@ -507,7 +554,14 @@ form
   .w-md-100
     width: 100% !important
 
-@media screen and (max-width: 768px)
+  .removeCartItem
+    top: 15px
+
+  .count-person
+    position: absolute
+    right: 0
+
+@media screen and (max-width: 767px)
   .login, .registration
     min-height: 92vh
 
@@ -541,7 +595,7 @@ form
     width: 100%
 
 
-@media screen and (max-width: 576px)
+@media screen and (max-width: 575px)
   .login, .registration
     min-height: 91vh
 
@@ -560,6 +614,23 @@ form
 
   .w-sm-100
     width: 100% !important
+
+  .count-person
+    position: relative
+    right: 0
+    top: 0
+
+    select
+      width: 50%
+      text-align: center
+
+  .count-person label, .count-night label
+    width: 100px
+
+  .count-person select, .count-night input
+    width: 50%
+    margin: 1px
+
 
 /*style scroll*/
 ::-webkit-scrollbar
@@ -621,7 +692,7 @@ form
   background: #152036 !important
   color: white !important
 
-  .bg-dark-el
+  .bg-dark-el, .datepicker--open, .datepicker--closed
     background: #1b2a47 !important
     color: white !important
 
@@ -655,5 +726,6 @@ form
   .active
     background: #152036 !important
     font-weight: 700
+
 
 //end dark
