--- a/style/style.sass
+++ b/style/style.sass
@@ -27,7 +27,6 @@
 
   fieldset
     position: relative
-    margin-top: 5px
 
   input, select, button
     font-size: 12px !important
@@ -128,7 +127,7 @@ label
 .rating-active
   color: orange !important
 
-.fab, .far, .fas
+.fa-heart, .fa-opencart
   cursor: pointer
 
 .header-color
@@ -467,6 +466,7 @@ form
 .count-person
   position: absolute
   right: 0
+
   select
     margin: 1px
 
@@ -498,7 +498,6 @@ form
   .count-person
     position: absolute
     right: -20px
-
 
 
 @media screen and (max-width: 1199px)
