--- a/style/style.sass
+++ b/style/style.sass
@@ -29,7 +29,7 @@
     position: relative
 
   input, select, button
-    font-size: 12px !important
+    font-size: 12px
 
   input:invalid + span:after
     position: absolute
@@ -145,19 +145,23 @@ label
   color: green
   font-size: 12px
 
-.btn-success
+.card-body .btn-success
   color: #fff
   background-color: #198754 !important
   border-color: #198754 !important
+
+.addToCartItem
+  font-size: 16px !important
 
 .close
   text-decoration: none
 
 .close-filters
   position: absolute
-  top: 5px
-  right: 15px
-  width: 23%
+  top: -5px
+  right: 5px
+  font-size: 25px
+  z-index: 5
 
 .close .clear-filters
   font-size: 15px !important
@@ -472,13 +476,49 @@ form
 
 
 .demo__item
-  width: 100%
+  width: 95vmin
 
 .count-night input
   margin: 1px
 
 .count-person select, .count-night input
   cursor: pointer
+
+.cursor
+  cursor: pointer
+
+
+.dropdown
+  position: relative
+  display: inline-block
+
+  .dropel
+    cursor: pointer
+
+  .dropdown-content
+    display: none
+    position: absolute
+    background-color: #f1f1f1
+    min-width: 85px
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2)
+    z-index: 1
+
+    a
+      color: black
+      padding: 12px 16px
+      text-decoration: none
+      display: block
+      font-size: 14px
+
+
+.dropdown-content a:hover
+  background-color: #1b2a47 !important
+
+.dropdown:hover .dropdown-content
+  display: block
+
+//.dropdown:hover .dropel
+//  background-color: #1b2a47 !important
 
 
 @media screen and (max-width: 1399px)
@@ -530,6 +570,9 @@ form
 
 
 @media screen and (max-width: 991px)
+  .demo__item
+    width: 81vmin
+
   .login, .registration
     min-height: 92vh
 
@@ -561,6 +604,9 @@ form
     right: 0
 
 @media screen and (max-width: 767px)
+  .demo__item
+    width: 90vmin
+
   .login, .registration
     min-height: 92vh
 
@@ -587,11 +633,11 @@ form
   .w-sm-100
     width: 100% !important
 
-  .close-filters
-    position: absolute
-    top: 5px
-    right: 0
-    width: 100%
+//.close-filters
+//  position: absolute
+//  top: -21px
+//  right: 0
+//  width: 100%
 
 
 @media screen and (max-width: 575px)
