--- a/style/style.sass
+++ b/style/style.sass
@@ -476,7 +476,11 @@ form
 
 
 .demo__item
-  width: 95vmin
+  width: 100%
+
+.datepicker-flex
+  display: flex
+  justify-content: space-around
 
 .count-night input
   margin: 1px
@@ -570,8 +574,6 @@ form
 
 
 @media screen and (max-width: 991px)
-  .demo__item
-    width: 81vmin
 
   .login, .registration
     min-height: 92vh
@@ -604,8 +606,6 @@ form
     right: 0
 
 @media screen and (max-width: 767px)
-  .demo__item
-    width: 90vmin
 
   .login, .registration
     min-height: 92vh
