--- a/style/style.css
+++ b/style/style.css
@@ -628,7 +628,7 @@ form {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.3s;
+  transition: opacity 3s ease-out;
 }
 
 .fade-enter,
