--- a/style/style.sass
+++ b/style/style.sass
@@ -523,7 +523,7 @@ form
 
 .fade-enter-active,
 .fade-leave-active
-  transition: opacity .3s
+  transition: opacity 3.0s ease-out
 
 .fade-enter,
 .fade-leave-to
